Update workflow to include workflow_run trigger
Add workflow_run trigger for Code Format Check completion

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,11 @@
 name: Multi-platform build test
-on: 
+
+on:
   workflow_dispatch:
+
+  workflow_run:
+    workflows: ["Code Format Check"]
+    types: [ "completed" ]
 
 jobs:
   ubuntu-build:
