--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,11 +1,7 @@
 name: Multi-platform build test
 
 on:
-  workflow_dispatch:
-
-  workflow_run:
-    workflows: ["Code Format Check"]
-    types: [ "completed" ]
+  push
 
 jobs:
   ubuntu-build:
